tests/Fixtures/Torture/Bad/bool_arith.g
// EXPECT G004
kernel { entry func Main() { let x = true + 5; } }
